[gd_scene load_steps=2 format=3 uid="uid://cudtcnhf3xyab"]

[ext_resource type="Script" path="res://UI/UnitPanel.gd" id="1_ahel8"]

[node name="UnitPanel" type="Panel"]
offset_right = 350.0
offset_bottom = 400.0
script = ExtResource("1_ahel8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnitTitle" type="Label" parent="VBoxContainer"]
offset_right = 350.0
offset_bottom = 26.0
text = "[ UNIT ]"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 350.0
offset_bottom = 400.0
size_flags_vertical = 3

[node name="SoldierTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
offset_right = 350.0
offset_bottom = 26.0
text = "Soldiers"

[node name="SoldierArea" type="Control" parent="VBoxContainer/VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 120.0
size_flags_vertical = 3
mouse_filter = 1

[node name="SoldierRow1" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/SoldierArea"]
custom_minimum_size = Vector2i(0, 64)
offset_top = 4.0
offset_right = 350.0
offset_bottom = 4.0

[node name="SoldierRow2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/SoldierArea"]
offset_top = 8.0
offset_right = 350.0
offset_bottom = 8.0

[node name="IconTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
offset_top = 124.0
offset_right = 350.0
offset_bottom = 150.0
text = "Icons"

[node name="IconArea" type="Control" parent="VBoxContainer/VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 154.0
offset_right = 350.0
offset_bottom = 245.0
size_flags_vertical = 3

[node name="IconRow1" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/IconArea"]
custom_minimum_size = Vector2i(0, 64)
offset_top = 4.0
offset_right = 350.0
offset_bottom = 4.0

[node name="IconRow2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/IconArea"]
offset_top = 8.0
offset_right = 350.0
offset_bottom = 8.0

[node name="Strategies" type="Label" parent="VBoxContainer/VBoxContainer"]
offset_top = 249.0
offset_right = 350.0
offset_bottom = 275.0
text = "Strategies
"

[node name="StrategyArea" type="Control" parent="VBoxContainer/VBoxContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 279.0
offset_right = 350.0
offset_bottom = 370.0
size_flags_vertical = 3

[node name="StrategyRow1" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/StrategyArea"]
custom_minimum_size = Vector2i(0, 64)
offset_top = 4.0
offset_right = 350.0
offset_bottom = 4.0

[node name="StrategyRow2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/StrategyArea"]
offset_top = 8.0
offset_right = 350.0
offset_bottom = 8.0
